# OpenCVFaceDetection

./: CMakeLists.txt  OpenCVFaceDetection.cpp  OpenCVFaceDetection.h  README.md
